{{$NEXT}}

1.103611  2010-12-27 14:12:06 Europe/London

  * Fix parsing of Changes file for CommitBuild message.
  * Update the POD

1.103610  2010-12-27 13:58:18 Europe/London

  * Change the commit messages to make more sense to me.
  * Support NO_CPAN environment variable.

1.103592  2010-12-25 01:00:37 Europe/London

  * Switch to using MetaResourcesFromGit

1.103581  2010-12-24 21:25:22 Europe/London

  * Initial release on an unsuspecting CPAN.

1.103580  2010-12-24 21:16:25 Europe/London

  * Initial non-release on an unsuspecting world.