@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * Skip addition of POD to any file not containing ABSTRACT statement.
+
 1.103611  2010-12-27 14:12:06 Europe/London
 
   * Fix parsing of Changes file for CommitBuild message.
